--- a/src/global.css
+++ b/src/global.css
@@ -1,12 +1,12 @@
 :root{
     /* Primary colors */
-    --slightly-desaturated-cayn: rgb(95, 180, 162);
-    --dark-blue: rgb(32,58,76);
-    --grayish-dark-blue:rgb(51,50,61); 
+    --slightly-desaturated-cayn: #5fb4a2;
+    --dark-blue: #203a4c;
+    --grayish-dark-blue:#33323d; 
     /* Secondary colors */
-    --very-light-gray: rgb(250,250,250);
-    --light-gray:rgb(234,234,235);
-    --bright-red:rgb(244,48,48);
+    --very-light-gray: #fafafa;
+    --light-gray:#eaeaeb;
+    --bright-red:#f43030;
 }
 
 /* Reset */
@@ -14,6 +14,7 @@ html{
     box-sizing: border-box;
     font-size: 62.5%;
     color: var(--grayish-dark-blue);
+    background-color: var(--very-light-gray);
 }
 
 *{
